# python-dependency-injector

./: pyproject.toml  setup.py  tox.ini
.github/workflows/: publishing.yml  tests-and-linters.yml
