[tool.poetry]
name = "celering-python-dependency-injector"
version = "4.42.1"
description = ""
authors = ["Alex Caraballo <alejandro.caraballo@celering.com>"]
readme = "README.rst"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
cython = "0.29.36"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
tox = "^4.15.0"
coverage = "^7.5.1"
flake8 = "^7.0.0"
pydocstyle = "^6.3.0"
sphinx-autobuild = "^2024.4.16"
pip = "^24.0"
mypy = "^1.10.0"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
boto3 = "^1.34.109"
mypy-boto3-s3 = "^1.34.105"
flask = "2.1.3"
werkzeug = "2.2.2"


[tool.poetry.group.ext.dependencies]
flask = "2.1.3"
werkzeug = "2.2.2"


[tool.poetry.group.doc.dependencies]
sphinx = "<3.5.0"
jinja2 = "<3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
